# WRSVM

./: .gitignore  LICENSE  README.md
WRSVM.jl/: INSTALL.md  Manifest.toml  Project.toml  README.md
WRSVM.jl/src/: WRSVM.jl  kernels.jl  noise.jl  solver_cs.jl  solver_simmsvm.jl
WRSVM.jl/test/: runtests.jl
WRSVMr/: DESCRIPTION  INSTALL.md  LICENSE  NAMESPACE  README.md
WRSVMr/R/: classifier.R  kernels.R  noise.R  zzz.R
WRSVMr/inst/: reference_X.csv  reference_y.csv
WRSVMr/tests/: testthat.R
WRSVMr/tests/testthat/: test-basic.R
docs/: README.md  index.html  julia.html  python.html  r.html  style.css
wrsvm_package/: INSTALL.md  README.md  pyproject.toml
wrsvm_package/tests/: test_basic.py
wrsvm_package/wrsvm/: __init__.py  classifier.py  decomposition.py  kernels.py  noise.py  simmsvm.py  solver.py
