[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "wrsvm"
version = "0.1.0"
description = "Open-Source Python, R, and Julia Toolkit for Robust Multiclass Classification Under Class Imbalance and Label Noise"
readme = "README.md"
requires-python = ">=3.9"
license = {text = "MIT"}
authors = [
    {name = "Annice Najafi"},
    {name = "Talayeh Razzaghi"}
]
keywords = ["svm", "classification", "imbalanced-learning", "noise-robust", "multiclass"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    "numpy>=1.20",
    "scipy>=1.7",
    "scikit-learn>=1.0",
    "cvxpy>=1.3",
    "clarabel>=0.5",
]

[project.optional-dependencies]
gpu = ["torch>=2.0"]
gurobi = ["gurobipy>=11"]
dev = ["pytest>=7.0", "pytest-cov"]

[project.urls]
"Source" = "https://github.com/annicenajafi/wrsvm"

[tool.setuptools.packages.find]
where = ["."]
include = ["wrsvm*"]
